--- a/public/css/post.css
+++ b/public/css/post.css
@@ -22,12 +22,10 @@ h1 span {
   max-width: 100vw;
   width: 100%;
   display: block;
-  overflow-wrap: anywhere;
 }
 
 h1::before,
 h1::after {
-  overflow-wrap: anywhere;
 }
 
 small + h1 {
